Added a setting to completely turn off automatic update checks / notifications

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
 	<string name="prefs_update_channel_stable">Stable</string>
 	<string name="prefs_update_channel_dev">Development</string>
 	<string name="prefs_update_channel_both">Both</string>
+
+	<string name="prefs_check_enabled">Check for updates</string>
 	<string name="prefs_check_interval_label">Check interval</string>
 
 	<string name="prefs_check_interval_label_1h">1 hour</string>
