--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -34,4 +34,6 @@
 
 	<string name="ok">OK</string>
 	<string name="cancel">Отмена</string>
+
+	<string name="footer">Версия %1$s</string>
 </resources>
